SIP - Scilab Image Processing Toolbox
Copyright (C) 2002-2004 Ricardo Fabbri
__________________________________________________________________


	+ Meijster's EDT algorithm included in bwdist. It is faster than all the
	others in most cases.
	+ New installer for Windows by Zhang Cheng
	+ Fixed bug in erode
	+ SIP now works with new ImageMagick versions (tested with 6.2.5)
	+ CVS repository at Source Forge started by Angus Errington 
	+ new DCT function by Angus Errington
	+ new features in interferometry_gui by jocelyn

0.4.0 Major new features!
   This list highlights the main changes from 0.3.1 to 0.4.0. Read the
   previous changelogs for minor improvements and details.
   
   + Help files moved to XML/HTML format and were totally revised;
   + NEW hsv2rgb and rgb2hsv functions to convert between RGB images 
     and HSV (Hue Saturation Intensity) images.
   + NEW radon and iradon functions
   + NEW sip_set_verbose, sip_quiet and sip_wordy functions to adjust 
     the messaging level issued by sip routines. For instance, this 
     may be used to stop imread and mogrify from issuing verbose 
     messages.
   + NEW sip_setenv to set environment variables.
   + imvariance is now coded in C for efficiency
   + unwrapl and unwrapp functions are now coded in C. unwrapl now 
     returns the unwrapped_phase and the phase_jumps.
   + NEW rgbplot function to plot the RGB components of a colormap
   + NEW sip_colormap function
   + FIX to imread: when you read a non-indexed image (such as
     truecolor or binary) with two output parameters, imread crashed 
     scilab in some cases. This is now fixed. (thx to )
   + FIX regarding truecolor images in imwrite, imread and mogrify 
     functions, by using scilab's new hypermatrix structure.
   + imwrite now supports the "depth" optional argument to set image 
     depth. It defaults to 16bpp, but one can now set it to 8bpp.
   + GANDALF is NOT needed anymore for the a source build