@@ -3,6 +3,7 @@ Copyright (C) 2002-2004 Ricardo Fabbri
 __________________________________________________________________
 
 
+	+ Mogrify now works with ImageMagick 6.3.3
 	+ Meijster's EDT algorithm included in bwdist. It is faster than all the
 	others in most cases.
 	+ New installer for Windows by Zhang Cheng
